--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     }
   ],
   "require": {
-    "marcj/php-rest-service": "0.1.*",
     "guzzlehttp/guzzle": "~6.0",
-    "willdurand/geocoder": "3.*"
+    "willdurand/geocoder": "3.*",
+    "jacwright/restserver": "dev-master"
   },
   "autoload": {
     "psr-4": {
